# Flowcode

./: .gitignore  README.md  mintty.exe.stackdump  q
A12/: CMakeLists.txt  Compilers.c  Compilers.h  INPUT1_Hello.err  MainReader.c  Reader.c  Reader.h  launch.vs.json
A12/A12/: A12.bat  CMakeLists.txt  Compilers.c  Compilers.h  INPUT1_Hello.fc  INPUT2_Volume.fc  INPUT3_Factorial.fc  INPUT4_Datatypes.fc  INPUT5_General.fc  INPUT6_Big.fc  MainReader.c  Reader.c  Reader.h  launch.vs.json
A12/A12/input/: INPUT1_Hello.fc
A2.1/: CST8152_Compilers_243F-A21-YOURLANGUAGE_Model.doc
Ax2/: BNF.txt  CMakeLists.txt  Compilers.c  Compilers.h  MainParser.c  MainReader.c  MainScanner.c  Parser.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h  Transition_Table.xlsx  Transition_Table_Updated2.xlsx  launch.vs.json  parser_table.xlsx
Ax2/test/: ExtraFunction.fc  HardestCallMethodTestCode.fc  HardestExpressionTestCode.fc  Hello_World.fc  LastTestCode.fc  Repeat.fc  Volume.fc
document/: CST8152_Compilers_243F-A11-Template.docx  ~$T8152_Compilers_243F-A11-Template.docx
